<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_site"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="208dp"
        android:text="@string/Name_Site"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/image_site"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/ubication"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/Ubication_site"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/image_site"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <ImageView
        android:id="@+id/image_site"
        android:layout_width="241dp"
        android:layout_height="161dp"
        android:layout_marginTop="188dp"
        android:scaleType="matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/photo" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Temperature"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_secondary_variant"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_site"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/temperature_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Temperature_detail"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/image_site"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/ubication"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="216dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/detail_info"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_site"
        app:layout_constraintVertical_bias="0.271" />

</androidx.constraintlayout.widget.ConstraintLayout>